--- a/error.html
+++ b/error.html
@@ -45,7 +45,7 @@
 				<div class="header__wrap">
 					<div class="header__left">
 						<a href="./main.html" class="header__logo">
-							<div class="header__logo-pic"><img src="https://scontent-arn2-2.cdninstagram.com/v/t51.2885-19/s150x150/76875187_439920826914475_1495386447144812544_n.jpg?_nc_ht=scontent-arn2-2.cdninstagram.com&_nc_ohc=iuVK8QzobhQAX8JoPdQ&oh=292eddc11d2c6bacf5dad900fd7035e6&oe=5E958FCC" alt="😁 Арманшыл Саят"></div>
+							<div class="header__logo-pic"><img src="https://scontent-arn2-2.cdninstagram.com/v/t51.2885-19/s150x150/76875187_439920826914475_1495386447144812544_n.jpg?_nc_ht=scontent-arn2-2.cdninstagram.com&_nc_ohc=iuVK8QzobhQAX8rNrXc&oh=d0a98dd95abf7356099db55674e3d669&oe=5E958FCC" alt="😁 Арманшыл Саят"></div>
 							<div class="header__logo-txt">sayatahmethan_</div>
 						</a>
 						<div class="header__title">😁 Арманшыл Саят</div>
@@ -93,16 +93,16 @@
 								<div class="article-more__item-pic-blind">
 									<span><i class="fa fa-comment-o" aria-hidden="true"></i>0</span> <span><i class="fa fa-heart" aria-hidden="true"></i>183</span>
 								</div>
-								<img src="https://scontent-arn2-1.cdninstagram.com/v/t51.2885-15/e35/81327250_1101761173508482_7031988878103105573_n.jpg?_nc_ht=scontent-arn2-1.cdninstagram.com&_nc_cat=110&_nc_ohc=wTDhYDWTy0wAX_MFYNo&oh=93d2b9119dd8918c4bd9ffb2c9a3e961&oe=5E95DF8E" alt="😏 Өз өміріңді қиындатпа!">
+								<img src="https://scontent-arn2-1.cdninstagram.com/v/t51.2885-15/e35/81327250_1101761173508482_7031988878103105573_n.jpg?_nc_ht=scontent-arn2-1.cdninstagram.com&_nc_cat=110&_nc_ohc=wTDhYDWTy0wAX-3XSLr&oh=3f6d2630a94d6ddc009b7046d91b7a95&oe=5E95DF8E" alt="😏 Өз өміріңді қиындатпа!">
 							</div>
 							<div class="article-more__item-name">😏 Өз өміріңді қиындатпа!</div>
 						</a>
 							<a href="./posts/./xx-zharnama-zhіbermey-xx-tap-1.html" class="article-more__item">
 							<div class="article-more__item-pic">
 								<div class="article-more__item-pic-blind">
-									<span><i class="fa fa-comment-o" aria-hidden="true"></i>0</span> <span><i class="fa fa-heart" aria-hidden="true"></i>180</span>
+									<span><i class="fa fa-comment-o" aria-hidden="true"></i>0</span> <span><i class="fa fa-heart" aria-hidden="true"></i>181</span>
 								</div>
-								<img src="https://scontent-arn2-2.cdninstagram.com/v/t51.2885-15/e35/82697574_2488574724803465_3332618556511582612_n.jpg?_nc_ht=scontent-arn2-2.cdninstagram.com&_nc_cat=105&_nc_ohc=tzQjHnYhVD0AX95fkbq&oh=444f72ade096c00c9fd0fb32661086e5&oe=5E93F071" alt="💰 Жарнама жібермей 🍋 тап!">
+								<img src="https://scontent-arn2-2.cdninstagram.com/v/t51.2885-15/e35/82697574_2488574724803465_3332618556511582612_n.jpg?_nc_ht=scontent-arn2-2.cdninstagram.com&_nc_cat=105&_nc_ohc=tzQjHnYhVD0AX9gXUNj&oh=b1629e1e05878db02864031720a20bf5&oe=5E93F071" alt="💰 Жарнама жібермей 🍋 тап!">
 							</div>
 							<div class="article-more__item-name">💰 Жарнама жібермей 🍋 тап!</div>
 						</a>
@@ -111,7 +111,7 @@
 								<div class="article-more__item-pic-blind">
 									<span><i class="fa fa-comment-o" aria-hidden="true"></i>0</span> <span><i class="fa fa-heart" aria-hidden="true"></i>162</span>
 								</div>
-								<img src="https://scontent-arn2-1.cdninstagram.com/v/t51.2885-15/e35/78813973_817282122053881_3899741372767422860_n.jpg?_nc_ht=scontent-arn2-1.cdninstagram.com&_nc_cat=101&_nc_ohc=NiWh2FRn_osAX_EuZ2V&oh=dd05c86859cdce3b8ce0568828b8f093&oe=5E93ADF6" alt="😊 «2020» жылы жеткен жетістіктерім">
+								<img src="https://scontent-arn2-1.cdninstagram.com/v/t51.2885-15/e35/78813973_817282122053881_3899741372767422860_n.jpg?_nc_ht=scontent-arn2-1.cdninstagram.com&_nc_cat=101&_nc_ohc=NiWh2FRn_osAX9g9KBx&oh=f6d3f58cad9d7eecbbec7ee9897b3208&oe=5E93ADF6" alt="😊 «2020» жылы жеткен жетістіктерім">
 							</div>
 							<div class="article-more__item-name">😊 «2020» жылы жеткен жетістіктерім</div>
 						</a>
@@ -120,45 +120,45 @@
 								<div class="article-more__item-pic-blind">
 									<span><i class="fa fa-comment-o" aria-hidden="true"></i>0</span> <span><i class="fa fa-heart" aria-hidden="true"></i>158</span>
 								</div>
-								<img src="https://scontent-arn2-2.cdninstagram.com/v/t51.2885-15/e35/75284446_193327011825233_3477503653942516291_n.jpg?_nc_ht=scontent-arn2-2.cdninstagram.com&_nc_cat=105&_nc_ohc=mW5mnD0oCqgAX-fILK9&oh=4ad7a16d60eded023d23ac5395e6ac37&oe=5E97BFD7" alt="АРМАН-> МАҚСАТ-> ІС- ӘРЕКЕТ->">
+								<img src="https://scontent-arn2-2.cdninstagram.com/v/t51.2885-15/e35/75284446_193327011825233_3477503653942516291_n.jpg?_nc_ht=scontent-arn2-2.cdninstagram.com&_nc_cat=105&_nc_ohc=q5lK5I0fJAAAX_LU0I1&oh=9422ce93cded95a4f3c6cc31aa6806fa&oe=5E97BFD7" alt="АРМАН-> МАҚСАТ-> ІС- ӘРЕКЕТ->">
 							</div>
 							<div class="article-more__item-name">АРМАН-> МАҚСАТ-> ІС- ӘРЕКЕТ-></div>
-						</a>
-							<a href="./posts/./xx-post-saluғa-uaқyt-zhoқ.html" class="article-more__item">
-							<div class="article-more__item-pic">
-								<div class="article-more__item-pic-blind">
-									<span><i class="fa fa-comment-o" aria-hidden="true"></i>0</span> <span><i class="fa fa-heart" aria-hidden="true"></i>152</span>
-								</div>
-								<img src="https://scontent-arn2-1.cdninstagram.com/v/t51.2885-15/e35/77401446_778145799273103_7373557858853546984_n.jpg?_nc_ht=scontent-arn2-1.cdninstagram.com&_nc_cat=107&_nc_ohc=kdON-VKWSa0AX9HkNVG&oh=a0d4613019bca9647db15a47173010c1&oe=5E8FCF3C" alt="⚠️ Пост салуға уақыт жоқ!">
-							</div>
-							<div class="article-more__item-name">⚠️ Пост салуға уақыт жоқ!</div>
 						</a>
 							<a href="./posts/./xx-zharnama-zhіbermey-xx-tap-2.html" class="article-more__item">
 							<div class="article-more__item-pic">
 								<div class="article-more__item-pic-blind">
 									<span><i class="fa fa-comment-o" aria-hidden="true"></i>0</span> <span><i class="fa fa-heart" aria-hidden="true"></i>147</span>
 								</div>
-								<img src="https://scontent-arn2-1.cdninstagram.com/v/t51.2885-15/e35/82344041_472286830346589_2121484091507824806_n.jpg?_nc_ht=scontent-arn2-1.cdninstagram.com&_nc_cat=109&_nc_ohc=4lIlivK5sW4AX-_QmMO&oh=b7ad8717400ecd553c26e990d1cab8c8&oe=5E8DDC81" alt="🤑 Жарнама жібермей 🍋 тап!">
+								<img src="https://scontent-arn2-1.cdninstagram.com/v/t51.2885-15/e35/82344041_472286830346589_2121484091507824806_n.jpg?_nc_ht=scontent-arn2-1.cdninstagram.com&_nc_cat=109&_nc_ohc=4lIlivK5sW4AX-uOf4c&oh=6a033697c9daf45fda810fab109c4b2e&oe=5E9B0B81" alt="🤑 Жарнама жібермей 🍋 тап!">
 							</div>
 							<div class="article-more__item-name">🤑 Жарнама жібермей 🍋 тап!</div>
+						</a>
+							<a href="./posts/./xx-zharnama-zhіbermey-xx-tap.html" class="article-more__item">
+							<div class="article-more__item-pic">
+								<div class="article-more__item-pic-blind">
+									<span><i class="fa fa-comment-o" aria-hidden="true"></i>0</span> <span><i class="fa fa-heart" aria-hidden="true"></i>144</span>
+								</div>
+								<img src="https://scontent-arn2-1.cdninstagram.com/v/t51.2885-15/e35/82491276_594100181151505_1238381754611812493_n.jpg?_nc_ht=scontent-arn2-1.cdninstagram.com&_nc_cat=101&_nc_ohc=ZtpaxJUQ3_oAX8UiMj8&oh=76826bbcbc9a5f83aa60f52ebb6f341a&oe=5E9B933E" alt="😮 Жарнама жібермей 🍋 тап!">
+							</div>
+							<div class="article-more__item-name">😮 Жарнама жібермей 🍋 тап!</div>
 						</a>
 							<a href="./posts/./xx-қayyrly-kүn-қalayyқx-mұnda.html" class="article-more__item">
 							<div class="article-more__item-pic">
 								<div class="article-more__item-pic-blind">
 									<span><i class="fa fa-comment-o" aria-hidden="true"></i>0</span> <span><i class="fa fa-heart" aria-hidden="true"></i>144</span>
 								</div>
-								<img src="https://scontent-arn2-1.cdninstagram.com/v/t51.2885-15/e35/82234340_108761900658007_8952337626418518331_n.jpg?_nc_ht=scontent-arn2-1.cdninstagram.com&_nc_cat=107&_nc_ohc=IeMpcjfud1YAX-WXe-z&oh=e13e026a32342175301a0766ace8ffd1&oe=5E904F1F" alt="👋 Қайырлы күн Қалайық, Мұнда">
+								<img src="https://scontent-arn2-1.cdninstagram.com/v/t51.2885-15/e35/82234340_108761900658007_8952337626418518331_n.jpg?_nc_ht=scontent-arn2-1.cdninstagram.com&_nc_cat=107&_nc_ohc=7aHWMsp9ojoAX8um65i&oh=daf3c8bf56deb6c4e2a942297bdad357&oe=5E904F1F" alt="👋 Қайырлы күн Қалайық, Мұнда">
 							</div>
 							<div class="article-more__item-name">👋 Қайырлы күн Қалайық, Мұнда</div>
 						</a>
-							<a href="./posts/./xx-zharnama-zhіbermey-xx-tap.html" class="article-more__item">
+							<a href="./posts/./xxmen-өmіrge-ne-үshіn-keldіm.html" class="article-more__item">
 							<div class="article-more__item-pic">
 								<div class="article-more__item-pic-blind">
-									<span><i class="fa fa-comment-o" aria-hidden="true"></i>0</span> <span><i class="fa fa-heart" aria-hidden="true"></i>143</span>
+									<span><i class="fa fa-comment-o" aria-hidden="true"></i>0</span> <span><i class="fa fa-heart" aria-hidden="true"></i>115</span>
 								</div>
-								<img src="https://scontent-arn2-1.cdninstagram.com/v/t51.2885-15/e35/82491276_594100181151505_1238381754611812493_n.jpg?_nc_ht=scontent-arn2-1.cdninstagram.com&_nc_cat=101&_nc_ohc=ZtpaxJUQ3_oAX_qj1Zq&oh=4f61aca969932b7ed9c19b94bf5bc71f&oe=5E8E643E" alt="😮 Жарнама жібермей 🍋 тап!">
+								<img src="https://scontent-arn2-1.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/84029257_650884998982587_8857777222872158278_n.jpg?_nc_ht=scontent-arn2-1.cdninstagram.com&_nc_cat=103&_nc_ohc=2frABPuwCfwAX_m35GY&oh=91bcc07152ba19bccdcdc27432ba7b8b&oe=5E98796A" alt="🧐Мен өмірге не үшін келдім?">
 							</div>
-							<div class="article-more__item-name">😮 Жарнама жібермей 🍋 тап!</div>
+							<div class="article-more__item-name">🧐Мен өмірге не үшін келдім?</div>
 						</a>
 						</div>
 				</div>
